--- a/index.html
+++ b/index.html
@@ -456,10 +456,10 @@
                                 <h4 class="title">Contact Us</h4>
                             </div>
                             <ul class="contact">
-                                <li>+809272561823</li>
-                                <li>info@gmail.com</li>
-                                <li>www.yourweb.com</li>
-                                <li>123 Stree New York City , United <br> States Of America 750.</li>
+                                <li>+61 401 364 204</li>
+                                <li>syphonsformula1inschools@gmail.com</li>
+                                <li>www.syphonsf1.github.io/-/</li>
+                                <li>35-49 Baxter Dr, Mount Pleasant<br> Australia, 4740</li>
                             </ul>
                         </div> <!-- footer contact -->
                     </div>
