changed footer and stuff like that idk

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                             <i class="lni lni-baloon"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Bronze</a></h4>
-                            <p class="text">Under silver and gold sponsors logos and slight exposure on the back of shirts.</p>
+                            <h4 class="services-title"><a href="https://4jw6pz01m29.typeform.com/to/xDGlKRH8" target="_blank">Bronze</a></h4>
+                            <p class="text">Under silver and gold sponsors logos and slight exposure on the back of shirts. Current Price: $250</p>
                             <a class="more" href="https://4jw6pz01m29.typeform.com/to/xDGlKRH8" target="_blank">I'm interested!<i class="lni lni-chevron-right"></i></a>
                         </div>
                     </div> <!-- single services -->
@@ -205,8 +205,8 @@
                             <i class="lni lni-cog"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Silver</a></h4>
-                            <p class="text">On the sleeves of our shirts and under the Gold sponsors logo Seen on the bottom of our team caps.</p>
+                            <h4 class="services-title"><a href="https://4jw6pz01m29.typeform.com/to/xDGlKRH8" target="_blank">Silver</a></h4>
+                            <p class="text">On the sleeves of our shirts and under the Gold sponsors logo Seen on the bottom of our team caps. Current Price: $500 </p>
                             <a class="more" href="https://4jw6pz01m29.typeform.com/to/xDGlKRH8" target="_blank">I'm interested!<i class="lni lni-chevron-right"></i></a>
                         </div>
                     </div> <!-- single services -->
@@ -219,8 +219,8 @@
                             <i class="lni lni-bolt-alt"></i>
                         </div>
                         <div class="services-content mt-30">
-                            <h4 class="services-title"><a href="#">Gold</a></h4>
-                            <p class="text">The Highest Sponsorship Option Available! This package provides exposure on the opposite side to our team logo on the back of our shirts (large advertisement) and have their logo on a strap of our caps </p>
+                            <h4 class="services-title"><a href="https://4jw6pz01m29.typeform.com/to/xDGlKRH8" target="_blank">Gold</a></h4>
+                            <p class="text">The Highest Sponsorship Option Available! This package provides exposure on the opposite side to our team logo on the back of our shirts (large advertisement) and have their logo on a strap of our caps. Current Price: $750 </p>
                             <a class="more" href="https://4jw6pz01m29.typeform.com/to/xDGlKRH8" target="_blank">I'm interested!<i class="lni lni-chevron-right"></i></a>
                         </div>
                     </div> <!-- single services -->
