--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" href="#home">Home</a>
+                                        <a class="page-scroll" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#features">Sponsorship</a>
+                                        <a class="page-scroll" href="blog/blog.html">Sponsorship</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#about">About</a>
+                                        <a class="page-scroll" href="aboutus1.html">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#facts">Why</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#team">Our Team</a>
+                                        <a class="page-scroll" href="aboutus1.html">Our Team</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#blog">Blog</a>
