thing again header

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <a class="page-scroll" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="blog/blog.html">Sponsorship</a>
+                                        <a class="page-scroll" href="#sponsors">Sponsorship</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="aboutus1.html">About</a>
@@ -92,7 +92,7 @@
                                         <a class="page-scroll" href="aboutus1.html">Our Team</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#blog">Blog</a>
+                                        <a class="page-scroll" href="blog/blog.html">Blog</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
