--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="assets/images/about1.svg" alt="about">
+                        <img src="https://i.ibb.co/k1Vt8HQ/Stacked-Australia-Black-removebg-preview.png" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
@@ -272,10 +272,10 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Modern design <span> with Essential Features</span></h3>
+                            <h3 class="title">About Our Team<span></span></h3>
                         </div> <!-- section title -->
-                        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <p class="text">Founded in 2019. Syphons team members didn’t know each other at the start of year 7 which is why the current team members were not working together in 2019.  However Joe and Luke were the original founders of syphons, being in the same class for all their core subjects they knew each other since prep in primary school and decided to work together.</p>
+                        <a href="aboutus1.html" class="main-btn">Learn More About Us</a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6 order-lg-first">
@@ -297,10 +297,10 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title"><span>Crafted for</span> SaaS, App and Software Landing Page</h3>
+                            <h3 class="title"><span>1we4123</span>1`3123`3`31`23</h3>
                         </div> <!-- section title -->
                         <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <a href="#" class="main-btn">Learn More </a>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
