changed some images

--- a/sponsors.html
+++ b/sponsors.html
@@ -51,12 +51,12 @@
                     <div class="u-layout-row">
                       <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                         <div class="u-container-layout u-valign-middle u-container-layout-2">
-                          <img class="u-image u-image-contain u-image-1" src="images/brand-1.png" data-image-width="400" data-image-height="300">
+                          <img class="u-image u-image-contain u-image-1" src="https://i.ibb.co/bBQL5fV/brand-1-removebg-preview.png" data-image-width="400" data-image-height="300">
                         </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-3">
                         <div class="u-container-layout u-valign-middle u-container-layout-3">
-                          <img class="u-image u-image-contain u-image-2" src="images/brand-5.png" data-image-width="257" data-image-height="110">
+                          <img class="u-image u-image-contain u-image-2" src="https://i.ibb.co/XpWBncs/brand-4-removebg-preview.png" data-image-width="257" data-image-height="110">
                         </div>
                       </div>
                     </div>
@@ -65,12 +65,12 @@
                     <div class="u-layout-row">
                       <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-4">
                         <div class="u-container-layout u-valign-middle u-container-layout-4">
-                          <img class="u-image u-image-contain u-image-3" src="images/brand-3.png" data-image-width="900" data-image-height="247">
+                          <img class="u-image u-image-contain u-image-3" src="https://i.ibb.co/RP1Z2Jg/download-1.png" data-image-width="900" data-image-height="247">
                         </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-5">
                         <div class="u-container-layout u-valign-middle u-container-layout-5">
-                          <img class="u-image u-image-contain u-image-4" src="images/brand-2.png" data-image-width="700" data-image-height="351">
+                          <img class="u-image u-image-contain u-image-4" src="" data-image-width="700" data-image-height="351">
                         </div>
                       </div>
                     </div>
