--- a/sponsors.html
+++ b/sponsors.html
@@ -70,7 +70,7 @@
                       </div>
                       <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-5">
                         <div class="u-container-layout u-valign-middle u-container-layout-5">
-                          <img class="u-image u-image-contain u-image-4" src="" data-image-width="700" data-image-height="351">
+                          <img class="u-image u-image-contain u-image-4" src="https://i.ibb.co/R64NSpw/brand-5.png" data-image-width="700" data-image-height="351">
                         </div>
                       </div>
                     </div>
@@ -79,7 +79,7 @@
                     <div class="u-layout-row">
                       <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-6">
                         <div class="u-container-layout u-valign-middle u-container-layout-6">
-                          <img class="u-image u-image-contain u-image-5" src="images/brand-4.png" data-image-width="267" data-image-height="189">
+                          <img class="u-image u-image-contain u-image-5" src="https://i.ibb.co/vjJTBKc/brand-3.png" data-image-width="267" data-image-height="189">
                         </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-7">
