added sponsors.html lol

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <a class="page-scroll" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#sponsors">Sponsorship</a>
+                                        <a class="page-scroll" href="sponsors.html">Sponsorship</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="aboutus1.html">About</a>
