--- a/sponsors.html
+++ b/sponsors.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="We Work With the&nbsp;Best Partners">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Page 5</title>
+    <title>Syphons Sponsors</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Page-5.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -51,11 +51,13 @@
                     <div class="u-layout-row">
                       <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                         <div class="u-container-layout u-valign-middle u-container-layout-2">
+				<a href="https://www.autodesk.com.au/" target="_blank"> 
                           <img class="u-image u-image-contain u-image-1" src="https://i.ibb.co/bBQL5fV/brand-1-removebg-preview.png" data-image-width="400" data-image-height="300">
                         </div>
                       </div>
                       <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-3">
                         <div class="u-container-layout u-valign-middle u-container-layout-3">
+				<a href="https://www.autodesk.com.au/" target="_blank"> 
                           <img class="u-image u-image-contain u-image-2" src="https://i.ibb.co/XpWBncs/brand-4-removebg-preview.png" data-image-width="257" data-image-height="110">
                         </div>
                       </div>
